--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/hagaital129/web_project_4.git"
   },
-  "author": "",
+  "author": "Hagai Tal",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/hagaital129/web_project_4/issues"
