--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
+    "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
+    "cssnano": "^5.0.16",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "postcss-loader": "^6.2.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
-    "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.20.2"
   }
 }
