--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "web_project_4",
   "version": "1.0.0",
-  "description": "* Website preview\r * About\r * Languages",
+  "description": "- intro\r - subjects\r - url",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve --mode development"
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -18,21 +20,20 @@
   },
   "homepage": "https://github.com/hagaital129/web_project_4#readme",
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.7",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.5.1",
-    "cssnano": "^5.0.16",
+    "core-js": "^3.21.1",
+    "css-loader": "^6.6.0",
+    "cssnano": "^5.0.17",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.4.5",
+    "mini-css-extract-plugin": "^2.5.3",
     "postcss-loader": "^6.2.1",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2"
-  },
-  "dependencies": {
-    "core-js": "^3.20.2"
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
