--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.5.1",
+    "css-loader": "^6.6.0",
     "cssnano": "^5.0.14",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
@@ -33,9 +33,7 @@
     "postcss-loader": "^6.2.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^3.11.3"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^3.11.3",
     "core-js": "^3.20.1"
   }
 }
